# libsocketlayer

./: .autotools  .cproject  .gitignore  .project  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  socketlayer.spec
rpmspecs/: mingw-socketlayer.spec  socketlayer.spec
src/: Makefile.am  Makefile.in  lib.c  socketlayer.h  socketlayer.pc.in
